fix: pointer on token must be hand when not used and normal when used

--- a/seasonssk.css
+++ b/seasonssk.css
@@ -342,6 +342,10 @@ h3 {
 	right: -20px;
 }
 
+.leftPlayerBoard .stockitem_unselectable:not(.tokenUsed){
+	cursor: pointer !important;
+}
+
 #board_counters {
 	display: flex;
 	flex-direction: row;
