fix(style): gear was not displayed anymore on cards

--- a/seasonssk.css
+++ b/seasonssk.css
@@ -503,8 +503,8 @@ h3 {
 	left: 42px;
 	bottom: 12px;
 	background-image: url("img/icons2022.png");
-	background-position: 88.4021% 7.8553%;
-	background-size: 1896.3%;
+	background-position: 0 23.892405%;
+	background-size: 138.888889%;
 	width: 40px;
 	height: 40px;
 }
