fix: age3 icon was displaying age2 icon

--- a/seasonssk.css
+++ b/seasonssk.css
@@ -699,11 +699,11 @@ h3 {
 	background-repeat: no-repeat;
 }
 
-.year2 {
+.age2 {
 	background-position: 0 0%;
 	background-size: 100%;
 }
-.year3 {
+.age3 {
 	background-position: 0 12.306438%;
 	background-size: 100%;
 }
